Changed 50 timetables to 25, added scraping calendar view - pretty rudimentary so far but works

--- a/Rooster.ipynb
+++ b/Rooster.ipynb
@@ -157,61 +157,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Bachelor Liberal Arts and Sciences (joint degree)', 'Bachelor Liberal Arts and Sciences (joint degree), Academic Core', 'Bachelor Liberal Arts and Sciences (joint degree), major Humanities', 'Bachelor Liberal Arts and Sciences (joint degree), major Sciences', 'Bachelor Liberal Arts and Sciences (joint degree), major Social Sciences', 'Exch B AUC', \"Bachelor's in Actuarial Science year 1\", \"Bachelor's in Actuarial Science year 2\", \"Bachelor's in Actuarial Science year 3\", \"Bachelor's in Business Administration year 1, Shared programme\", \"Bachelor's in Business Administration year 2, Shared programme\", \"Bachelor's in Business Administration year 3, Specialisation Accounting & Control\", \"Bachelor's in Business Administration year 3, Specialisation Entrepreneurship, Innovation & Creativity\", \"Bachelor's in Business Administration year 3, Specialisation Finance\", \"Bachelor's in Business Administration year 3, Specialisation Management in the Digital Age\", \"Bachelor's in Business Analytics year 1\", \"Bachelor's in Business Analytics year 2\", \"Bachelor's in Business Analytics year 3\", \"Bachelor's in Econometrics and Data Science year 1, Shared programme\", \"Bachelor's in Econometrics and Data Science year 2, Shared programme\", \"Bachelor's in Econometrics and Data Science year 3, Specialisation Data Science\", \"Bachelor's in Econometrics and Data Science year 3, Specialisation Econometrics\", \"Bachelor's in Economics and Business Economics year 1, Major Business Economics, specialisation Accounting & Control\", \"Bachelor's in Economics and Business Economics year 1, Major Business Economics, specialisation Finance\", \"Bachelor's in Economics and Business Economics year 1, Major Business Economics, specialisation Organisational Economics\", \"Bachelor's in Economics and Business Economics year 1, Major Economics, specialisation Economics\", \"Bachelor's in Economics and Business Economics year 1, Shared programme\", \"Bachelor's in Economics and Business Economics year 2, Major Business Economics, specialisation Accounting & Control\", \"Bachelor's in Economics and Business Economics year 2, Major Business Economics, specialisation Finance\", \"Bachelor's in Economics and Business Economics year 2, Major Business Economics, specialisation Organisational Economics\", \"Bachelor's in Economics and Business Economics year 2, Major Economics, specialisation Economics\", \"Bachelor's in Economics and Business Economics year 2, Shared programme\", \"Bachelor's in Economics and Business Economics year 3, Major Business Economics, specialisation Accounting & Control\", \"Bachelor's in Economics and Business Economics year 3, Major Business Economics, specialisation Finance\", \"Bachelor's in Economics and Business Economics year 3, Major Business Economics, specialisation Organisational Economics\", \"Bachelor's in Economics and Business Economics year 3, Major Economics, specialisation Economics\", \"Bachelor's in Fiscal Economics year 1\", \"Bachelor's in Fiscal Economics year 2\", \"Bachelor's in Fiscal Economics year 3\", 'Contract teaching programme Actuarial Practice Cycle (APC)', 'Contract teaching programme ESG Academy', 'Contract teaching programme Postmaster Accountancy (PMA)', 'Honours A Sustainable Perspective on Finance', 'Honours Honours Programme UvA Economics and Business', 'Honours Honours programme UvA MSc Business Administration Sustainability', 'Honours Honours programme UvA MSc Economics', 'Honours MSc Actuarial Science and Mathematical Finance', 'Honours MSc Business Administration Honours Programme Data Driven Management', 'Honours MSc Business Economics', 'Honours MSc Data Science and Business Analytics']\n"
+      "['Bachelor Liberal Arts and Sciences (joint degree)', 'Bachelor Liberal Arts and Sciences (joint degree), Academic Core', 'Bachelor Liberal Arts and Sciences (joint degree), major Humanities', 'Bachelor Liberal Arts and Sciences (joint degree), major Sciences', 'Bachelor Liberal Arts and Sciences (joint degree), major Social Sciences', 'Exch B AUC', \"Bachelor's in Actuarial Science year 1\", \"Bachelor's in Actuarial Science year 2\", \"Bachelor's in Actuarial Science year 3\", \"Bachelor's in Business Administration year 1, Shared programme\", \"Bachelor's in Business Administration year 2, Shared programme\", \"Bachelor's in Business Administration year 3, Specialisation Accounting & Control\", \"Bachelor's in Business Administration year 3, Specialisation Entrepreneurship, Innovation & Creativity\", \"Bachelor's in Business Administration year 3, Specialisation Finance\", \"Bachelor's in Business Administration year 3, Specialisation Management in the Digital Age\", \"Bachelor's in Business Analytics year 1\", \"Bachelor's in Business Analytics year 2\", \"Bachelor's in Business Analytics year 3\", \"Bachelor's in Econometrics and Data Science year 1, Shared programme\", \"Bachelor's in Econometrics and Data Science year 2, Shared programme\", \"Bachelor's in Econometrics and Data Science year 3, Specialisation Data Science\", \"Bachelor's in Econometrics and Data Science year 3, Specialisation Econometrics\", \"Bachelor's in Economics and Business Economics year 1, Major Business Economics, specialisation Accounting & Control\", \"Bachelor's in Economics and Business Economics year 1, Major Business Economics, specialisation Finance\", \"Bachelor's in Economics and Business Economics year 1, Major Business Economics, specialisation Organisational Economics\"]\n"
      ]
     }
    ],
    "source": [
-    "courses_50 = flat_list[:50]\n",
-    "print(courses_50)\n",
-    "\n",
-    "\n",
-    "            \n",
-    "\n"
+    "courses_25 = flat_list[:25]\n",
+    "print(courses_25)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def add_timetables():\n",
+    "    i = 0\n",
     "\n",
-    "# Add first 50 timetables\n",
-    "\n",
-    "i = 0\n",
-    "\n",
-    "faculties = driver.find_elements(By.XPATH, '//div[@class=\"GNKVYU1P3\"]/ul/li')\n",
-    "for faculty in faculties:\n",
-    "    end = False   \n",
-    "    faculty.click()\n",
-    "    time.sleep(1)\n",
-    "    courses = driver.find_elements(By.XPATH, '//div[@class=\"GNKVYU1AQ\"]/span')\n",
-    "    for course in courses:\n",
-    "        if course.text in courses_50 and i < 50:   \n",
-    "            course.click()\n",
-    "            i+=1\n",
-    "        else:\n",
-    "            end = True\n",
+    "    faculties = driver.find_elements(By.XPATH, '//div[@class=\"GNKVYU1P3\"]/ul/li')\n",
+    "    for faculty in faculties:\n",
+    "        end = False   \n",
+    "        faculty.click()\n",
+    "        time.sleep(1)\n",
+    "        courses = driver.find_elements(By.XPATH, '//div[@class=\"GNKVYU1AQ\"]/span')\n",
+    "        for course in courses:\n",
+    "            if course.text in courses_25 and i < 25:   \n",
+    "                course.click()\n",
+    "                i+=1\n",
+    "            else:\n",
+    "                end = True\n",
+    "                break           \n",
+    "        driver.find_element(By.XPATH, '//button[@class=\"gwt-Button GNKVYU1NK\"]').click()\n",
+    "        if end:\n",
     "            break\n",
-    "            \n",
-    "    driver.find_element(By.XPATH, '//button[@class=\"gwt-Button GNKVYU1NK\"]').click()\n",
-    "    if end:\n",
-    "        break\n",
     "\n",
-    "        \n",
     "            \n",
+    "                \n",
     "\n",
+    "        time.sleep(1)\n",
+    "        open_dropdown()\n",
     "    time.sleep(1)\n",
-    "    open_dropdown()\n",
-    "\n"
+    "    driver.find_element(By.XPATH, '//button[@class=\"gwt-Button GNKVYU1PK\"]').click()\n",
+    "    time.sleep(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_timetables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium.webdriver.common.keys import Keys\n",
+    "\n",
+    "from selenium.webdriver.common.action_chains import ActionChains\n",
+    "\n",
+    "# Scrape events from calendar view\n",
+    "def get_calendar():\n",
+    "    actions = ActionChains(driver)\n",
+    "\n",
+    "    nrfailed = 0\n",
+    "    calendar_events = []\n",
+    "    events = driver.find_elements(By.XPATH, '//div[@class=\"wc-cal-event\"]')\n",
+    "    for event in events:\n",
+    "        event.click()\n",
+    "        time.sleep(1)\n",
+    "        try:\n",
+    "            date = driver.find_element(By.XPATH, '//div[@class=\"gwt-Label GNKVYU1OS\"]').text\n",
+    "            lesson_time = driver.find_element(By.XPATH, '//div[@class=\"gwt-Label GNKVYU1PS\"]').text\n",
+    "            code = driver.find_element(By.XPATH, '//div[@class=\"GNKVYU1DS\"]/div/div/div[1]').text\n",
+    "            location = driver.find_element(By.XPATH, '//div[@class=\"GNKVYU1DS\"]/div/div/div[2]').text\n",
+    "            size = driver.find_element(By.XPATH, '//div[@class=\"GNKVYU1DS\"]/div/div/div[5]').text\n",
+    "            time.sleep(1)\n",
+    "            event_dict = {'date': date, 'lesson_time': lesson_time, 'code': code, 'location': location, 'size': size}\n",
+    "            calendar_events.append(event_dict)\n",
+    "        except Exception as e:\n",
+    "                nrfailed+=1\n",
+    "        actions.send_keys(Keys.ESCAPE).perform()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_calendar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(calendar_events)\n",
+    "\n",
+    "df['location'] = df['location'].str.split('\\n').str[1]\n",
+    "df['size'] = df['size'].str.split('\\n').str[1]\n",
+    "df['code'] = df['code'].str.split('\\n').str[1]\n",
+    "df"
    ]
   }
  ],
