--- a/Rooster.ipynb
+++ b/Rooster.ipynb
@@ -228,7 +228,7 @@
     "\n",
     "from selenium.webdriver.common.action_chains import ActionChains\n",
     "\n",
-    "# Scrape events from calendar view\n",
+    "# Scrape events from calendar view - takes around 10 minutes\n",
     "def get_calendar():\n",
     "    actions = ActionChains(driver)\n",
     "\n",
