Added remove_calendars function

--- a/Rooster.ipynb
+++ b/Rooster.ipynb
@@ -274,6 +274,36 @@
     "df['code'] = df['code'].str.split('\\n').str[1]\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_calendars():\n",
+    "    driver.find_element(By.XPATH, '//div[@class=\"GNKVYU1FJ\"][1]').click()\n",
+    "    time.sleep(1)\n",
+    "    closers = driver.find_elements(By.XPATH, '//li[@class=\"GNKVYU1N2\"]')\n",
+    "    for item in closers:\n",
+    "        if 'Remove all' in item.text:\n",
+    "            item.click()\n",
+    "            break\n",
+    "    buttons = driver.find_elements(By.XPATH, '//div[@class=\"GNKVYU1HO\"]/button')\n",
+    "    for button in buttons:\n",
+    "        if 'Remove all' in button.text:\n",
+    "            button.click()\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove_calendars()"
+   ]
   }
  ],
  "metadata": {
