Added data sample

--- a/Rooster.ipynb
+++ b/Rooster.ipynb
@@ -198,11 +198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Iterate over list\n",
+    "# Open rooster\n",
     "\n",
     "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))\n",
     "driver.get(\"https://rooster.uva.nl/schedule\")\n",
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -233,6 +233,8 @@
     }
    ],
    "source": [
+    "# Get list of courses\n",
+    "\n",
     "open_selection()\n",
     "open_dropdown()\n",
     "courses_list = []\n",
@@ -241,10 +243,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Delte first element of list, since it's not a course\n",
     "new_list = courses_list[1:]"
    ]
   },
@@ -267,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -279,6 +282,7 @@
     }
    ],
    "source": [
+    "# Flatten list, select frist 25 courses\n",
     "new_list = [course.split('\\n') for course in new_list]\n",
     "flat_list = [item for sublist in new_list for item in sublist]\n",
     "courses_25 = flat_list[:25]\n",
@@ -342,6 +346,7 @@
     "        time.sleep(3)\n",
     "        get_calendar_test()\n",
     "        remove_calendars()\n",
+    "        # Delete first 25 courses from list, select next 25\n",
     "        del flat_list[:25]\n",
     "        courses_25 = flat_list[:25]\n",
     "        open_selection()\n",
@@ -360,6 +365,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Turn data into dataframe and export to csv\n",
+    "\n",
     "df = pd.DataFrame(calendar_events)\n",
     "\n",
     "df['location'] = df['location'].str.split('\\n').str[1]\n",
