Added final new codes to Notebook before collecting addresses

--- a/coordinates/scraping_addresses.ipynb
+++ b/coordinates/scraping_addresses.ipynb
@@ -126303,7 +126303,7 @@
    "outputs": [
     {
      "ename": "NoSuchWindowException",
-     "evalue": "Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: chrome=130.0.6723.117)\nStacktrace:\n\tGetHandleVerifier [0x0093EBD3+24307]\n\t(No symbol) [0x008C8D74]\n\t(No symbol) [0x007AC323]\n\t(No symbol) [0x0078E00B]\n\t(No symbol) [0x00815F6F]\n\t(No symbol) [0x00828EC9]\n\t(No symbol) [0x0080FC26]\n\t(No symbol) [0x007E219C]\n\t(No symbol) [0x007E311D]\n\tGetHandleVerifier [0x00BE8D93+2818227]\n\tGetHandleVerifier [0x00C4542E+3196750]\n\tGetHandleVerifier [0x00C3D9D2+3165426]\n\tGetHandleVerifier [0x009DDA70+675216]\n\t(No symbol) [0x008D1B3D]\n\t(No symbol) [0x008CEA18]\n\t(No symbol) [0x008CEBB5]\n\t(No symbol) [0x008C1640]\n\tBaseThreadInitThunk [0x766E7BA9+25]\n\tRtlInitializeExceptionChain [0x7724C0CB+107]\n\tRtlClearBits [0x7724C04F+191]\n",
+     "evalue": "Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: chrome=130.0.6723.117)\nStacktrace:\n\tGetHandleVerifier [0x006FEBD3+24307]\n\t(No symbol) [0x00688D74]\n\t(No symbol) [0x0056C323]\n\t(No symbol) [0x0054E00B]\n\t(No symbol) [0x005D5F6F]\n\t(No symbol) [0x005E8EC9]\n\t(No symbol) [0x005CFC26]\n\t(No symbol) [0x005A219C]\n\t(No symbol) [0x005A311D]\n\tGetHandleVerifier [0x009A8D93+2818227]\n\tGetHandleVerifier [0x00A0542E+3196750]\n\tGetHandleVerifier [0x009FD9D2+3165426]\n\tGetHandleVerifier [0x0079DA70+675216]\n\t(No symbol) [0x00691B3D]\n\t(No symbol) [0x0068EA18]\n\t(No symbol) [0x0068EBB5]\n\t(No symbol) [0x00681640]\n\tBaseThreadInitThunk [0x766E7BA9+25]\n\tRtlInitializeExceptionChain [0x7724C0CB+107]\n\tRtlClearBits [0x7724C04F+191]\n",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
@@ -126312,7 +126312,7 @@
       "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:444\u001b[0m, in \u001b[0;36mWebDriver.current_url\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    435\u001b[0m \u001b[38;5;129m@property\u001b[39m\n\u001b[0;32m    436\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcurrent_url\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[0;32m    437\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Gets the URL of the current page.\u001b[39;00m\n\u001b[0;32m    438\u001b[0m \n\u001b[0;32m    439\u001b[0m \u001b[38;5;124;03m    :Usage:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    442\u001b[0m \u001b[38;5;124;03m            driver.current_url\u001b[39;00m\n\u001b[0;32m    443\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 444\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCommand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGET_CURRENT_URL\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
       "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:354\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    352\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    353\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[1;32m--> 354\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror_handler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    355\u001b[0m     response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    356\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
       "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:229\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    227\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    228\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[1;32m--> 229\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
-      "\u001b[1;31mNoSuchWindowException\u001b[0m: Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: chrome=130.0.6723.117)\nStacktrace:\n\tGetHandleVerifier [0x0093EBD3+24307]\n\t(No symbol) [0x008C8D74]\n\t(No symbol) [0x007AC323]\n\t(No symbol) [0x0078E00B]\n\t(No symbol) [0x00815F6F]\n\t(No symbol) [0x00828EC9]\n\t(No symbol) [0x0080FC26]\n\t(No symbol) [0x007E219C]\n\t(No symbol) [0x007E311D]\n\tGetHandleVerifier [0x00BE8D93+2818227]\n\tGetHandleVerifier [0x00C4542E+3196750]\n\tGetHandleVerifier [0x00C3D9D2+3165426]\n\tGetHandleVerifier [0x009DDA70+675216]\n\t(No symbol) [0x008D1B3D]\n\t(No symbol) [0x008CEA18]\n\t(No symbol) [0x008CEBB5]\n\t(No symbol) [0x008C1640]\n\tBaseThreadInitThunk [0x766E7BA9+25]\n\tRtlInitializeExceptionChain [0x7724C0CB+107]\n\tRtlClearBits [0x7724C04F+191]\n"
+      "\u001b[1;31mNoSuchWindowException\u001b[0m: Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: chrome=130.0.6723.117)\nStacktrace:\n\tGetHandleVerifier [0x006FEBD3+24307]\n\t(No symbol) [0x00688D74]\n\t(No symbol) [0x0056C323]\n\t(No symbol) [0x0054E00B]\n\t(No symbol) [0x005D5F6F]\n\t(No symbol) [0x005E8EC9]\n\t(No symbol) [0x005CFC26]\n\t(No symbol) [0x005A219C]\n\t(No symbol) [0x005A311D]\n\tGetHandleVerifier [0x009A8D93+2818227]\n\tGetHandleVerifier [0x00A0542E+3196750]\n\tGetHandleVerifier [0x009FD9D2+3165426]\n\tGetHandleVerifier [0x0079DA70+675216]\n\t(No symbol) [0x00691B3D]\n\t(No symbol) [0x0068EA18]\n\t(No symbol) [0x0068EBB5]\n\t(No symbol) [0x00681640]\n\tBaseThreadInitThunk [0x766E7BA9+25]\n\tRtlInitializeExceptionChain [0x7724C0CB+107]\n\tRtlClearBits [0x7724C04F+191]\n"
      ]
     }
    ],
@@ -126368,7 +126368,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['https://bagviewer.kadaster.nl/lvbag/bag-viewer/?objectId=0363100012171532&theme=BRT%20Achtergrond&geometry.x=122598.07182599524&geometry.y=486194.1180860803&zoomlevel=11.03314400030912&bijbehorendeAdressen=Pand', 'https://bagviewer.kadaster.nl/lvbag/bag-viewer/?objectId=0363100012165490&theme=BRT+Achtergrond&geometry.x=122313.27900000001&geometry.y=486238.7795&zoomlevel=13.524284564534437&bijbehorendeAdressen=Pand', 'https://bagviewer.kadaster.nl/lvbag/bag-viewer/?objectId=0363100012170297&theme=BRT+Achtergrond&geometry.x=122313.27900000001&geometry.y=486238.7795&zoomlevel=13.524284564534437&bijbehorendeAdressen=Pand', 'https://bagviewer.kadaster.nl/lvbag/bag-viewer/?objectId=0363100012182929&theme=BRT+Achtergrond&geometry.x=122313.27900000001&geometry.y=486238.7795&zoomlevel=13.524284564534437&bijbehorendeAdressen=Pand']\n"
+      "['https://bagviewer.kadaster.nl/lvbag/bag-viewer/?objectId=0363100012171532&theme=BRT%20Achtergrond&geometry.x=122598.07182599524&geometry.y=486194.1180860803&zoomlevel=11.03314400030912&bijbehorendeAdressen=Pand', 'https://bagviewer.kadaster.nl/lvbag/bag-viewer/?objectId=0363100100091821&theme=BRT+Achtergrond&geometry.x=122451.49133918143&geometry.y=486232.7990251022&zoomlevel=14.984798429615658&bijbehorendeAdressen=Pand', 'https://bagviewer.kadaster.nl/lvbag/bag-viewer/?objectId=0363010000641658&theme=BRT+Achtergrond&geometry.x=122476.17445631293&geometry.y=486277.4703121955&zoomlevel=14.974878963647985', 'https://bagviewer.kadaster.nl/lvbag/bag-viewer/?objectId=0363100012247432&theme=BRT+Achtergrond&geometry.x=122499.95163649452&geometry.y=486282.70107565844&zoomlevel=12.990125267327986&bijbehorendeAdressen=Pand', 'https://bagviewer.kadaster.nl/lvbag/bag-viewer/?objectId=0363100012170419&theme=BRT+Achtergrond&geometry.x=122469.9885&geometry.y=486307.163&zoomlevel=13&bijbehorendeAdressen=Pand']\n"
      ]
     }
    ],
@@ -126378,7 +126378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126389,23 +126389,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['https://bagviewer.kadaster.nl/lvbag/bag-viewer/?objectId=0363100012171532&theme=BRT%20Achtergrond&geometry.x=122598.07182599524&geometry.y=486194.1180860803&zoomlevel=11.03314400030912&bijbehorendeAdressen=Pand',\n",
-       " 'https://bagviewer.kadaster.nl/lvbag/bag-viewer/?objectId=0363100012165490&theme=BRT+Achtergrond&geometry.x=122313.27900000001&geometry.y=486238.7795&zoomlevel=13.524284564534437&bijbehorendeAdressen=Pand',\n",
-       " 'https://bagviewer.kadaster.nl/lvbag/bag-viewer/?objectId=0363100012170297&theme=BRT+Achtergrond&geometry.x=122313.27900000001&geometry.y=486238.7795&zoomlevel=13.524284564534437&bijbehorendeAdressen=Pand',\n",
-       " 'https://bagviewer.kadaster.nl/lvbag/bag-viewer/?objectId=0363100012182929&theme=BRT+Achtergrond&geometry.x=122313.27900000001&geometry.y=486238.7795&zoomlevel=13.524284564534437&bijbehorendeAdressen=Pand']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importing the csv-file and reloading it into a list if necesserry\n",
     "df_urls_d = pd.read_csv(\"visited_urls.csv\")\n",
@@ -126422,7 +126408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126435,9 +126421,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error invalid literal for int() with base 10: 'Pand'\n",
+      "Error invalid literal for int() with base 10: 'Pand'\n"
+     ]
+    }
+   ],
    "source": [
     "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))\n",
     "\n",
@@ -126503,6 +126498,8 @@
     "        # Pause the search for a bit, so to not overwhelm the website\n",
     "        time.sleep(1)\n",
     "\n",
+    "    # If no addresses were found or another error occured, the following code will be printed, so to not interrupt the other URLs\n",
+    "    # This will happen quite often if there are buildings which have no address attached to them, such as with: https://bagviewer.kadaster.nl/lvbag/bag-viewer/?objectId=0363100100091821&theme=BRT+Achtergrond&geometry.x=122451.49133918143&geometry.y=486232.7990251022&zoomlevel=14.984798429615658&bijbehorendeAdressen=Pand \n",
     "    except Exception as e:\n",
     "        print(f\"Error {e}\")\n",
     "\n",
@@ -126511,14 +126508,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Sarphatistraat 4, Amsterdam'], ['Sarphatistraat 6, Amsterdam'], ['Nieuwe Prinsengracht 40, Amsterdam'], ['Nieuwe Prinsengracht 42, Amsterdam'], ['Nieuwe Prinsengracht 44, Amsterdam'], ['Nieuwe Prinsengracht 46-1, Amsterdam'], ['Nieuwe Prinsengracht 46-2, Amsterdam'], ['Nieuwe Prinsengracht 46-3, Amsterdam'], ['Nieuwe Prinsengracht 46 H, Amsterdam'], ['Nieuwe Achtergracht 49, Amsterdam'], ['Weesperstraat 107, Amsterdam'], ['Weesperstraat 111, Amsterdam'], ['Weesperstraat 113, Amsterdam'], ['Weesperstraat 115, Amsterdam'], ['Weesperstraat 117, Amsterdam'], ['Weesperstraat 121, Amsterdam'], ['Nieuwe Achtergracht 51-1, Amsterdam'], ['Nieuwe Achtergracht 51-2, Amsterdam'], ['Nieuwe Achtergracht 51-2, Amsterdam'], ['Nieuwe Achtergracht 51-3, Amsterdam'], ['Nieuwe Achtergracht 51 H, Amsterdam'], ['Nieuwe Achtergracht 53-1, Amsterdam'], ['Nieuwe Achtergracht 53-2, Amsterdam'], ['Nieuwe Achtergracht 53-3, Amsterdam'], ['Nieuwe Achtergracht 53 H, Amsterdam'], ['Nieuwe Prinsengracht 48-1, Amsterdam'], ['Nieuwe Prinsengracht 48-2, Amsterdam'], ['Nieuwe Prinsengracht 48-3, Amsterdam'], ['Nieuwe Prinsengracht 48 H, Amsterdam']]\n"
+      "[['Sarphatistraat 4, Amsterdam'], ['Sarphatistraat 6, Amsterdam'], ['Korte Lepelstraat 81, Amsterdam'], ['Nieuwe Prinsengracht 88-1, Amsterdam'], ['Nieuwe Prinsengracht 88-2, Amsterdam'], ['Nieuwe Prinsengracht 88-3, Amsterdam'], ['Nieuwe Prinsengracht 88 H, Amsterdam']]\n"
      ]
     }
    ],
@@ -126535,38 +126532,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: geopy in c:\\users\\viggo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (2.4.1)\n",
-      "Requirement already satisfied: geographiclib<3,>=1.52 in c:\\users\\viggo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from geopy) (2.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install geopy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Kriterion, 170, Roetersstraat, Weesperbuurt, Centrum, Amsterdam, Noord-Holland, Nederland, 1018 WE, Nederland\n",
-      "(52.362493, 4.9106652)\n",
-      "{'place_id': 144589270, 'licence': 'Data © OpenStreetMap contributors, ODbL 1.0. http://osm.org/copyright', 'osm_type': 'node', 'osm_id': 253130481, 'lat': '52.362493', 'lon': '4.9106652', 'class': 'amenity', 'type': 'cinema', 'place_rank': 30, 'importance': 0.2522941968270874, 'addresstype': 'amenity', 'name': 'Kriterion', 'display_name': 'Kriterion, 170, Roetersstraat, Weesperbuurt, Centrum, Amsterdam, Noord-Holland, Nederland, 1018 WE, Nederland', 'boundingbox': ['52.3624430', '52.3625430', '4.9106152', '4.9107152']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test for using geopy on the dataset\n",
     "from geopy.geocoders import Nominatim\n",
@@ -126579,7 +126556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126617,17 +126594,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['Sarphatistraat 4, Amsterdam', 52.361485, 4.910463, 'house', None], ['Sarphatistraat 6, Amsterdam', 52.3598012, 4.9022206, 'house', None], ['Nieuwe Prinsengracht 40, Amsterdam', 52.3633989, 4.9072757, 'house', None], ['Nieuwe Prinsengracht 42, Amsterdam', 52.3634173, 4.9073636, 'house', None], ['Nieuwe Prinsengracht 44, Amsterdam', 52.3634447, 4.9074807, 'house', None], ['Nieuwe Prinsengracht 46-1, Amsterdam', 52.3634542, 4.9075981, 'house', None], ['Nieuwe Prinsengracht 46-2, Amsterdam', 52.363454, 4.907598, 'house', None], ['Nieuwe Prinsengracht 46-3, Amsterdam', 52.3634539, 4.9075979, 'house', None], ['Nieuwe Prinsengracht 46 H, Amsterdam', 52.3634537, 4.9075977, 'house', None], ['Nieuwe Achtergracht 49, Amsterdam', 52.3627084, 4.9076502, 'house', None], ['Weesperstraat 107, Amsterdam', 52.3633261, 4.9070562, 'house', None], ['Weesperstraat 111, Amsterdam', 52.3631916, 4.9071164, 'house', None], ['Weesperstraat 113, Amsterdam', 52.3630173, 4.9072382, 'community_centre', 'CCC - Concern Congres Centrum'], ['Weesperstraat 115, Amsterdam', 52.3630122, 4.9072211, 'house', None], ['Weesperstraat 117, Amsterdam', 52.3629226, 4.9072808, 'house', None], ['Weesperstraat 121, Amsterdam', 52.3627167, 4.9074886, 'house', None], ['Nieuwe Achtergracht 51-1, Amsterdam', 52.3627267, 4.9077234, 'house', None], ['Nieuwe Achtergracht 51-2, Amsterdam', 52.3627268, 4.9077236, 'house', None], ['Nieuwe Achtergracht 51-2, Amsterdam', 52.3627268, 4.9077236, 'house', None], ['Nieuwe Achtergracht 51-3, Amsterdam', 52.3627269, 4.9077237, 'house', None], ['Nieuwe Achtergracht 51 H, Amsterdam', 52.362727, 4.9077239, 'house', None], ['Nieuwe Achtergracht 53-1, Amsterdam', 52.3627451, 4.9078259, 'house', None], ['Nieuwe Achtergracht 53-2, Amsterdam', 52.3628990897933, 4.908949342950499, 'residential', 'Nieuwe Achtergracht'], ['Nieuwe Achtergracht 53-3, Amsterdam', 52.3627452, 4.9078257, 'house', None], ['Nieuwe Achtergracht 53 H, Amsterdam', 52.3627452, 4.9078255, 'house', None], ['Nieuwe Prinsengracht 48-1, Amsterdam', 52.3634636, 4.9077007, 'house', None], ['Nieuwe Prinsengracht 48-2, Amsterdam', 52.3634634, 4.9077008, 'house', None], ['Nieuwe Prinsengracht 48-3, Amsterdam', 52.3634632, 4.9077008, 'house', None], ['Nieuwe Prinsengracht 48 H, Amsterdam', 52.363463, 4.9077009, 'house', None]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(all_scraped_addresses)"
    ]
